--- a/.github/workflows/update-badges.yml
+++ b/.github/workflows/update-badges.yml
@@ -3,6 +3,8 @@ name: Update badges
 on:
   schedule:
     - cron: "0 0 * * *"
+  workflow_dispatch:
+
 jobs:
   update-readme:
     name: Update Readme with badges
